Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Parser.y
-----------------------------------------------------------------------------

state 24 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_getSyntaxTree -> program                    (0)
	program -> stmts                                   (1)
	stmts -> fundecl scs stmts                         (2)
	stmts -> vardecl scs ';' stmts                     (3)
	stmts -> expr scs ';' stmts                        (4)
	stmts -> fundecl scs                               (5)
	stmts -> vardecl scs                               (6)
	stmts -> expr scs                                  (7)
	scs -> scs ';'                                     (8)
	scs ->                                             (9)
	names -> names ',' NAME                            (10)
	names -> NAME                                      (11)
	names ->                                           (12)
	body -> open stmts close                           (13)
	names_body -> names_open stmts close               (14)
	open -> '{'                                        (15)
	names_open -> '(' names ')' '{'                    (16)
	close -> '}'                                       (17)
	fundecl -> fun_NAME names_body                     (18)
	fundecl -> fun_OPNAME names_body                   (19)
	fun_NAME -> 'fun' NAME                             (20)
	fun_OPNAME -> 'fun' OPNAME                         (21)
	vardecl -> 'var' vardecls                          (22)
	vardecls -> declOrInit ',' vardecls                (23)
	vardecls -> declOrInit                             (24)
	declOrInit -> NAME                                 (25)
	declOrInit -> NAME '=' expr                        (26)
	OPNAME -> OP1                                      (27)
	OPNAME -> OP2                                      (28)
	OPNAME -> OP3                                      (29)
	OPNAME -> OP4                                      (30)
	OPNAME -> OP5                                      (31)
	OPNAME -> OP6                                      (32)
	OPNAME -> OP7                                      (33)
	expr -> 'return' expr                              (34)
	expr -> NAME '=' expr                              (35)
	expr -> 'go' body                                  (36)
	expr -> expr '||' expr                             (37)
	expr -> expr '&&' expr                             (38)
	expr -> '!' expr                                   (39)
	expr -> expr OP1 expr                              (40)
	expr -> expr OP2 expr                              (41)
	expr -> expr OP3 expr                              (42)
	expr -> expr OP4 expr                              (43)
	expr -> expr OP5 expr                              (44)
	expr -> expr OP6 expr                              (45)
	expr -> expr OP7 expr                              (46)
	expr -> OPNAME expr                                (47)
	expr -> NAME                                       (48)
	expr -> NAME '(' exprs ')'                         (49)
	expr -> expr '(' exprs ')'                         (50)
	expr -> LITERAL                                    (51)
	expr -> '(' expr ')'                               (52)
	expr -> ifcase elseifs elsecase                    (53)
	expr -> 'while' '(' expr ')' body                  (54)
	expr -> 'fun' names_body                           (55)
	ifcase -> 'if' '(' expr ')' body                   (56)
	elseifs -> 'elsif' '(' expr ')' body elseifs       (57)
	elseifs ->                                         (58)
	elsecase -> 'else' body                            (59)
	elsecase ->                                        (60)
	exprs -> expr ',' exprs                            (61)
	exprs -> expr                                      (62)
	exprs ->                                           (63)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'if'           { IF }
	'else'         { ELSE }
	'elsif'        { ELSIF }
	'while'        { WHILE }
	'var'          { VAR }
	'fun'          { FUN }
	'return'       { RETURN }
	'go'           { GO }
	'||'           { OR }
	'&&'           { AND }
	'!'            { NOT }
	OP1            { OP1     $$ }
	OP2            { OP2     $$ }
	OP3            { OP3     $$ }
	OP4            { OP4     $$ }
	OP5            { OP5     $$ }
	OP6            { OP6     $$ }
	OP7            { OP7     $$ }
	NAME           { NAME    $$ }
	LITERAL        { LITERAL $$ }
	'('            { DELIM '(' }
	')'            { DELIM ')' }
	'{'            { DELIM '{' }
	'}'            { DELIM '}' }
	','            { DELIM ',' }
	';'            { DELIM ';' }
	'='            { DELIM '=' }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_getSyntaxTree rule  0
	program         rule  1
	stmts           rules 2, 3, 4, 5, 6, 7
	scs             rules 8, 9
	names           rules 10, 11, 12
	body            rule  13
	names_body      rule  14
	open            rule  15
	names_open      rule  16
	close           rule  17
	fundecl         rules 18, 19
	fun_NAME        rule  20
	fun_OPNAME      rule  21
	vardecl         rule  22
	vardecls        rules 23, 24
	declOrInit      rules 25, 26
	OPNAME          rules 27, 28, 29, 30, 31, 32, 33
	expr            rules 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55
	ifcase          rule  56
	elseifs         rules 57, 58
	elsecase        rules 59, 60
	exprs           rules 61, 62, 63

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_getSyntaxTree -> . program                   (rule 0)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'var'          shift, and enter state 12
	'fun'          shift, and enter state 13
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26

	program        goto state 27
	stmts          goto state 2
	fundecl        goto state 3
	fun_NAME       goto state 4
	fun_OPNAME     goto state 5
	vardecl        goto state 6
	OPNAME         goto state 7
	expr           goto state 8
	ifcase         goto state 9

State 1

	program -> . stmts                                  (rule 1)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'var'          shift, and enter state 12
	'fun'          shift, and enter state 13
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26

	stmts          goto state 2
	fundecl        goto state 3
	fun_NAME       goto state 4
	fun_OPNAME     goto state 5
	vardecl        goto state 6
	OPNAME         goto state 7
	expr           goto state 8
	ifcase         goto state 9

State 2

	program -> stmts .                                  (rule 1)

	%eof           reduce using rule 1


State 3

	stmts -> fundecl . scs stmts                        (rule 2)
	stmts -> fundecl . scs                              (rule 5)

	'if'           reduce using rule 9
	'while'        reduce using rule 9
	'var'          reduce using rule 9
	'fun'          reduce using rule 9
	'return'       reduce using rule 9
	'go'           reduce using rule 9
	'!'            reduce using rule 9
	OP1            reduce using rule 9
	OP2            reduce using rule 9
	OP3            reduce using rule 9
	OP4            reduce using rule 9
	OP5            reduce using rule 9
	OP6            reduce using rule 9
	OP7            reduce using rule 9
	NAME           reduce using rule 9
	LITERAL        reduce using rule 9
	'('            reduce using rule 9
	'}'            reduce using rule 9
	';'            reduce using rule 9
	%eof           reduce using rule 9

	scs            goto state 64

State 4

	fundecl -> fun_NAME . names_body                    (rule 18)

	'('            shift, and enter state 41

	names_body     goto state 63
	names_open     goto state 38

State 5

	fundecl -> fun_OPNAME . names_body                  (rule 19)

	'('            shift, and enter state 41

	names_body     goto state 62
	names_open     goto state 38

State 6

	stmts -> vardecl . scs ';' stmts                    (rule 3)
	stmts -> vardecl . scs                              (rule 6)

	'}'            reduce using rule 9
	';'            reduce using rule 9
	%eof           reduce using rule 9

	scs            goto state 61

State 7

	expr -> OPNAME . expr                               (rule 47)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'fun'          shift, and enter state 29
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26

	OPNAME         goto state 7
	expr           goto state 60
	ifcase         goto state 9

State 8

	stmts -> expr . scs ';' stmts                       (rule 4)
	stmts -> expr . scs                                 (rule 7)
	expr -> expr . '||' expr                            (rule 37)
	expr -> expr . '&&' expr                            (rule 38)
	expr -> expr . OP1 expr                             (rule 40)
	expr -> expr . OP2 expr                             (rule 41)
	expr -> expr . OP3 expr                             (rule 42)
	expr -> expr . OP4 expr                             (rule 43)
	expr -> expr . OP5 expr                             (rule 44)
	expr -> expr . OP6 expr                             (rule 45)
	expr -> expr . OP7 expr                             (rule 46)
	expr -> expr . '(' exprs ')'                        (rule 50)

	'||'           shift, and enter state 50
	'&&'           shift, and enter state 51
	OP1            shift, and enter state 52
	OP2            shift, and enter state 53
	OP3            shift, and enter state 54
	OP4            shift, and enter state 55
	OP5            shift, and enter state 56
	OP6            shift, and enter state 57
	OP7            shift, and enter state 58
	'('            shift, and enter state 59
	'}'            reduce using rule 9
	';'            reduce using rule 9
	%eof           reduce using rule 9

	scs            goto state 49

State 9

	expr -> ifcase . elseifs elsecase                   (rule 53)

	'else'         reduce using rule 58
	'elsif'        shift, and enter state 48
	'||'           reduce using rule 58
	'&&'           reduce using rule 58
	OP1            reduce using rule 58
	OP2            reduce using rule 58
	OP3            reduce using rule 58
	OP4            reduce using rule 58
	OP5            reduce using rule 58
	OP6            reduce using rule 58
	OP7            reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'}'            reduce using rule 58
	','            reduce using rule 58
	';'            reduce using rule 58
	%eof           reduce using rule 58

	elseifs        goto state 47

State 10

	ifcase -> 'if' . '(' expr ')' body                  (rule 56)

	'('            shift, and enter state 46


State 11

	expr -> 'while' . '(' expr ')' body                 (rule 54)

	'('            shift, and enter state 45


State 12

	vardecl -> 'var' . vardecls                         (rule 22)

	NAME           shift, and enter state 44

	vardecls       goto state 42
	declOrInit     goto state 43

State 13

	fun_NAME -> 'fun' . NAME                            (rule 20)
	fun_OPNAME -> 'fun' . OPNAME                        (rule 21)
	expr -> 'fun' . names_body                          (rule 55)

	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 40
	'('            shift, and enter state 41

	names_body     goto state 37
	names_open     goto state 38
	OPNAME         goto state 39

State 14

	expr -> 'return' . expr                             (rule 34)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'fun'          shift, and enter state 29
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26

	OPNAME         goto state 7
	expr           goto state 36
	ifcase         goto state 9

State 15

	expr -> 'go' . body                                 (rule 36)

	'{'            shift, and enter state 35

	body           goto state 33
	open           goto state 34

State 16

	expr -> '!' . expr                                  (rule 39)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'fun'          shift, and enter state 29
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26

	OPNAME         goto state 7
	expr           goto state 32
	ifcase         goto state 9

State 17

	OPNAME -> OP1 .                                     (rule 27)

	'if'           reduce using rule 27
	'while'        reduce using rule 27
	'fun'          reduce using rule 27
	'return'       reduce using rule 27
	'go'           reduce using rule 27
	'!'            reduce using rule 27
	OP1            reduce using rule 27
	OP2            reduce using rule 27
	OP3            reduce using rule 27
	OP4            reduce using rule 27
	OP5            reduce using rule 27
	OP6            reduce using rule 27
	OP7            reduce using rule 27
	NAME           reduce using rule 27
	LITERAL        reduce using rule 27
	'('            reduce using rule 27


State 18

	OPNAME -> OP2 .                                     (rule 28)

	'if'           reduce using rule 28
	'while'        reduce using rule 28
	'fun'          reduce using rule 28
	'return'       reduce using rule 28
	'go'           reduce using rule 28
	'!'            reduce using rule 28
	OP1            reduce using rule 28
	OP2            reduce using rule 28
	OP3            reduce using rule 28
	OP4            reduce using rule 28
	OP5            reduce using rule 28
	OP6            reduce using rule 28
	OP7            reduce using rule 28
	NAME           reduce using rule 28
	LITERAL        reduce using rule 28
	'('            reduce using rule 28


State 19

	OPNAME -> OP3 .                                     (rule 29)

	'if'           reduce using rule 29
	'while'        reduce using rule 29
	'fun'          reduce using rule 29
	'return'       reduce using rule 29
	'go'           reduce using rule 29
	'!'            reduce using rule 29
	OP1            reduce using rule 29
	OP2            reduce using rule 29
	OP3            reduce using rule 29
	OP4            reduce using rule 29
	OP5            reduce using rule 29
	OP6            reduce using rule 29
	OP7            reduce using rule 29
	NAME           reduce using rule 29
	LITERAL        reduce using rule 29
	'('            reduce using rule 29


State 20

	OPNAME -> OP4 .                                     (rule 30)

	'if'           reduce using rule 30
	'while'        reduce using rule 30
	'fun'          reduce using rule 30
	'return'       reduce using rule 30
	'go'           reduce using rule 30
	'!'            reduce using rule 30
	OP1            reduce using rule 30
	OP2            reduce using rule 30
	OP3            reduce using rule 30
	OP4            reduce using rule 30
	OP5            reduce using rule 30
	OP6            reduce using rule 30
	OP7            reduce using rule 30
	NAME           reduce using rule 30
	LITERAL        reduce using rule 30
	'('            reduce using rule 30


State 21

	OPNAME -> OP5 .                                     (rule 31)

	'if'           reduce using rule 31
	'while'        reduce using rule 31
	'fun'          reduce using rule 31
	'return'       reduce using rule 31
	'go'           reduce using rule 31
	'!'            reduce using rule 31
	OP1            reduce using rule 31
	OP2            reduce using rule 31
	OP3            reduce using rule 31
	OP4            reduce using rule 31
	OP5            reduce using rule 31
	OP6            reduce using rule 31
	OP7            reduce using rule 31
	NAME           reduce using rule 31
	LITERAL        reduce using rule 31
	'('            reduce using rule 31


State 22

	OPNAME -> OP6 .                                     (rule 32)

	'if'           reduce using rule 32
	'while'        reduce using rule 32
	'fun'          reduce using rule 32
	'return'       reduce using rule 32
	'go'           reduce using rule 32
	'!'            reduce using rule 32
	OP1            reduce using rule 32
	OP2            reduce using rule 32
	OP3            reduce using rule 32
	OP4            reduce using rule 32
	OP5            reduce using rule 32
	OP6            reduce using rule 32
	OP7            reduce using rule 32
	NAME           reduce using rule 32
	LITERAL        reduce using rule 32
	'('            reduce using rule 32


State 23

	OPNAME -> OP7 .                                     (rule 33)

	'if'           reduce using rule 33
	'while'        reduce using rule 33
	'fun'          reduce using rule 33
	'return'       reduce using rule 33
	'go'           reduce using rule 33
	'!'            reduce using rule 33
	OP1            reduce using rule 33
	OP2            reduce using rule 33
	OP3            reduce using rule 33
	OP4            reduce using rule 33
	OP5            reduce using rule 33
	OP6            reduce using rule 33
	OP7            reduce using rule 33
	NAME           reduce using rule 33
	LITERAL        reduce using rule 33
	'('            reduce using rule 33


State 24

	expr -> NAME . '=' expr                             (rule 35)
	expr -> NAME .                                      (rule 48)
	expr -> NAME . '(' exprs ')'                        (rule 49)

	'||'           reduce using rule 48
	'&&'           reduce using rule 48
	OP1            reduce using rule 48
	OP2            reduce using rule 48
	OP3            reduce using rule 48
	OP4            reduce using rule 48
	OP5            reduce using rule 48
	OP6            reduce using rule 48
	OP7            reduce using rule 48
	'('            shift, and enter state 30
			(reduce using rule 48)

	')'            reduce using rule 48
	'}'            reduce using rule 48
	','            reduce using rule 48
	';'            reduce using rule 48
	'='            shift, and enter state 31
	%eof           reduce using rule 48


State 25

	expr -> LITERAL .                                   (rule 51)

	'||'           reduce using rule 51
	'&&'           reduce using rule 51
	OP1            reduce using rule 51
	OP2            reduce using rule 51
	OP3            reduce using rule 51
	OP4            reduce using rule 51
	OP5            reduce using rule 51
	OP6            reduce using rule 51
	OP7            reduce using rule 51
	'('            reduce using rule 51
	')'            reduce using rule 51
	'}'            reduce using rule 51
	','            reduce using rule 51
	';'            reduce using rule 51
	%eof           reduce using rule 51


State 26

	expr -> '(' . expr ')'                              (rule 52)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'fun'          shift, and enter state 29
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26

	OPNAME         goto state 7
	expr           goto state 28
	ifcase         goto state 9

State 27

	%start_getSyntaxTree -> program .                   (rule 0)

	%eof           accept


State 28

	expr -> expr . '||' expr                            (rule 37)
	expr -> expr . '&&' expr                            (rule 38)
	expr -> expr . OP1 expr                             (rule 40)
	expr -> expr . OP2 expr                             (rule 41)
	expr -> expr . OP3 expr                             (rule 42)
	expr -> expr . OP4 expr                             (rule 43)
	expr -> expr . OP5 expr                             (rule 44)
	expr -> expr . OP6 expr                             (rule 45)
	expr -> expr . OP7 expr                             (rule 46)
	expr -> expr . '(' exprs ')'                        (rule 50)
	expr -> '(' expr . ')'                              (rule 52)

	'||'           shift, and enter state 50
	'&&'           shift, and enter state 51
	OP1            shift, and enter state 52
	OP2            shift, and enter state 53
	OP3            shift, and enter state 54
	OP4            shift, and enter state 55
	OP5            shift, and enter state 56
	OP6            shift, and enter state 57
	OP7            shift, and enter state 58
	'('            shift, and enter state 59
	')'            shift, and enter state 93


State 29

	expr -> 'fun' . names_body                          (rule 55)

	'('            shift, and enter state 41

	names_body     goto state 37
	names_open     goto state 38

State 30

	expr -> NAME '(' . exprs ')'                        (rule 49)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'fun'          shift, and enter state 29
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26
	')'            reduce using rule 63

	OPNAME         goto state 7
	expr           goto state 68
	ifcase         goto state 9
	exprs          goto state 92

State 31

	expr -> NAME '=' . expr                             (rule 35)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'fun'          shift, and enter state 29
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26

	OPNAME         goto state 7
	expr           goto state 91
	ifcase         goto state 9

State 32

	expr -> expr . '||' expr                            (rule 37)
	expr -> expr . '&&' expr                            (rule 38)
	expr -> '!' expr .                                  (rule 39)
	expr -> expr . OP1 expr                             (rule 40)
	expr -> expr . OP2 expr                             (rule 41)
	expr -> expr . OP3 expr                             (rule 42)
	expr -> expr . OP4 expr                             (rule 43)
	expr -> expr . OP5 expr                             (rule 44)
	expr -> expr . OP6 expr                             (rule 45)
	expr -> expr . OP7 expr                             (rule 46)
	expr -> expr . '(' exprs ')'                        (rule 50)

	'||'           reduce using rule 39
	'&&'           reduce using rule 39
	OP1            shift, and enter state 52
	OP2            shift, and enter state 53
	OP3            shift, and enter state 54
	OP4            shift, and enter state 55
	OP5            shift, and enter state 56
	OP6            shift, and enter state 57
	OP7            shift, and enter state 58
	'('            reduce using rule 39
	')'            reduce using rule 39
	'}'            reduce using rule 39
	','            reduce using rule 39
	';'            reduce using rule 39
	%eof           reduce using rule 39


State 33

	expr -> 'go' body .                                 (rule 36)

	'||'           reduce using rule 36
	'&&'           reduce using rule 36
	OP1            reduce using rule 36
	OP2            reduce using rule 36
	OP3            reduce using rule 36
	OP4            reduce using rule 36
	OP5            reduce using rule 36
	OP6            reduce using rule 36
	OP7            reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'}'            reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36
	%eof           reduce using rule 36


State 34

	body -> open . stmts close                          (rule 13)

	'if'           shift, and enter state 10
	'while'        shift, and enter state 11
	'var'          shift, and enter state 12
	'fun'          shift, and enter state 13
	'return'       shift, and enter state 14
	'go'           shift, and enter state 15
	'!'            shift, and enter state 16
	OP1            shift, and enter state 17
	OP2            shift, and enter state 18
	OP3            shift, and enter state 19
	OP4            shift, and enter state 20
	OP5            shift, and enter state 21
	OP6            shift, and enter state 22
	OP7            shift, and enter state 23
	NAME           shift, and enter state 24
	LITERAL        shift, and enter state 25
	'('            shift, and enter state 26

	stmts          goto state 90
	fundecl        goto state 3
	fun_NAME       goto state 4
	fun_OPNAME     goto state 5
	vardecl        goto state 6
	OPNAME         goto state 7
	expr           goto state 8
	ifcase         goto state 9

State 35

	open -> '{' .                                       (rule 15)

	'if'           reduce using rule 15
	'while'        reduce using rule 15
	'var'          reduce using rule 15
	'fun'          reduce using rule 15
	'return'       reduce using rule 15
	'go'           reduce using rule 15
	'!'            reduce using rule 15
	OP1            reduce using rule 15
	OP2            reduce using rule 15
	OP3            reduce using rule 15
	OP4            reduce using rule 15
	OP5            reduce using rule 15
	OP6            reduce using rule 15
	OP7            reduce using rule 15
	NAME           reduce using rule 15
	LITERAL        reduce using rule 15
	'('            reduce using rule 15


State 36

	expr -> 'return' expr .                             (rule 34)
	expr -> expr . '||' expr                            (rule 37)
	expr -> expr . '&&' expr                            (rule 38)
	expr -> expr . OP1 expr                             (rule 40)
	expr -> expr . OP2 expr                             (rule 41)
	expr -> expr . OP3 expr                             (rule 42)
	expr -> expr . OP4 expr                             (rule 43)
	expr -> expr . OP5 expr                             (rule 44)
	expr -> expr . OP6 expr                             (rule 45)
	expr -> expr . OP7 expr                             (rule 46)
	expr -> expr . '(' exprs ')'                        (rule 50)

	'||'           shift, and enter state 50
	'&&'           shift, and enter state 51
	OP1            shift, and enter state 52
	OP2            shift, and enter state 53
	OP3            shift, and enter state 54
	OP4            shift, and enter state 55
	OP5            shift, and enter state 56
	OP6            shift, and enter state 57
	OP7            shift, and enter state 58
	'('            shift, and enter state 59
	')'            reduce using rule 34
	'}'            reduce using rule 34
	','            reduce using rule 34
	';'            reduce using rule 34
	%eof           reduce using rule 34


State 37

	expr -> 'fun' names_body .                          (rule 55)
